# ece2400-sec3

./: .gitignore
src/: CMakeLists.txt  Makefile  avg-mfile-basic-test.c  avg-mfile-basic-tests.c  avg-mfile.c  avg-sfile.c  avg.c  avg.h  utst.h
